doc(jekyll): jekyll for index established
Front matter like meta, and links are now located _layouts/default.html

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -645,6 +645,28 @@
           "height": 5149,
           "width": 3654
         },
+        "455fe0dd": {
+          "id": "455fe0dd",
+          "path": "index-old.html",
+          "output": "index-old.html",
+          "name": "index-old.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5c776fe1": {
+          "id": "5c776fe1",
+          "path": "_site/index-old.html",
+          "output": "_site/index-old.html",
+          "name": "index-old.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
