--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "non-profit-website",
       "path": "",
       "files": {
+        "58393671": {
+          "id": "58393671",
+          "path": "_site/index.html",
+          "output": "_site/index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "60833937": {
           "id": "60833937",
           "path": "scss/components/_main.scss",
@@ -377,6 +388,275 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "6ba9c3a5": {
+          "id": "6ba9c3a5",
+          "path": "_site/about.html",
+          "output": "_site/about.html",
+          "name": "about.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5ee1efc4": {
+          "id": "5ee1efc4",
+          "path": "_site/advocacy.html",
+          "output": "_site/advocacy.html",
+          "name": "advocacy.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e952370d": {
+          "id": "e952370d",
+          "path": "_site/donate.html",
+          "output": "_site/donate.html",
+          "name": "donate.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "700db3ad": {
+          "id": "700db3ad",
+          "path": "_site/media.html",
+          "output": "_site/media.html",
+          "name": "media.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "543bf65b": {
+          "id": "543bf65b",
+          "path": "_site/what-we-do.html",
+          "output": "_site/what-we-do.html",
+          "name": "what-we-do.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "a3fcacac": {
+          "id": "a3fcacac",
+          "path": "_site/css/style.css",
+          "output": "_site/css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "91c5767c": {
+          "id": "91c5767c",
+          "path": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-01.jpg",
+          "output": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-01.jpg",
+          "name": "Frohlick-AFF-Wireframes-01.jpg",
+          "category": "IMAGE",
+          "size": 176509,
+          "type": "jpg",
+          "initialSize": 176509,
+          "optimized": false,
+          "height": 2888,
+          "width": 240
+        },
+        "3d678bdf": {
+          "id": "3d678bdf",
+          "path": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-02.jpg",
+          "output": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-02.jpg",
+          "name": "Frohlick-AFF-Wireframes-02.jpg",
+          "category": "IMAGE",
+          "size": 287398,
+          "type": "jpg",
+          "initialSize": 287398,
+          "optimized": false,
+          "height": 2204,
+          "width": 960
+        },
+        "6b8411ae": {
+          "id": "6b8411ae",
+          "path": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-03.jpg",
+          "output": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-03.jpg",
+          "name": "Frohlick-AFF-Wireframes-03.jpg",
+          "category": "IMAGE",
+          "size": 146696,
+          "type": "jpg",
+          "initialSize": 146696,
+          "optimized": false,
+          "height": 2729,
+          "width": 240
+        },
+        "9786cf01": {
+          "id": "9786cf01",
+          "path": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-04.jpg",
+          "output": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-04.jpg",
+          "name": "Frohlick-AFF-Wireframes-04.jpg",
+          "category": "IMAGE",
+          "size": 270228,
+          "type": "jpg",
+          "initialSize": 270228,
+          "optimized": false,
+          "height": 2663,
+          "width": 960
+        },
+        "3200932d": {
+          "id": "3200932d",
+          "path": "_site/deliverables/02-milestone/design/araujo-nav-01-01.jpg",
+          "output": "_site/deliverables/02-milestone/design/araujo-nav-01-01.jpg",
+          "name": "araujo-nav-01-01.jpg",
+          "category": "IMAGE",
+          "size": 29803,
+          "type": "jpg",
+          "initialSize": 29803,
+          "optimized": false,
+          "height": 438,
+          "width": 247
+        },
+        "5fdcf3a1": {
+          "id": "5fdcf3a1",
+          "path": "_site/deliverables/02-milestone/design/araujo-landing-01.jpg",
+          "output": "_site/deliverables/02-milestone/design/araujo-landing-01.jpg",
+          "name": "araujo-landing-01.jpg",
+          "category": "IMAGE",
+          "size": 227345,
+          "type": "jpg",
+          "initialSize": 227345,
+          "optimized": false,
+          "height": 6502,
+          "width": 247
+        },
+        "80265fdb": {
+          "id": "80265fdb",
+          "path": "_site/deliverables/02-milestone/design/araujo-nav2-01-01.jpg",
+          "output": "_site/deliverables/02-milestone/design/araujo-nav2-01-01.jpg",
+          "name": "araujo-nav2-01-01.jpg",
+          "category": "IMAGE",
+          "size": 28930,
+          "type": "jpg",
+          "initialSize": 28930,
+          "optimized": false,
+          "height": 437,
+          "width": 247
+        },
+        "19230ec1": {
+          "id": "19230ec1",
+          "path": "_site/deliverables/02-milestone/design/araujo-nav3-01.jpg",
+          "output": "_site/deliverables/02-milestone/design/araujo-nav3-01.jpg",
+          "name": "araujo-nav3-01.jpg",
+          "category": "IMAGE",
+          "size": 28100,
+          "type": "jpg",
+          "initialSize": 28100,
+          "optimized": false,
+          "height": 437,
+          "width": 247
+        },
+        "4f9578f4": {
+          "id": "4f9578f4",
+          "path": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-05.jpg",
+          "output": "_site/deliverables/02-milestone/design/Frohlick-AFF-Wireframes-05.jpg",
+          "name": "Frohlick-AFF-Wireframes-05.jpg",
+          "category": "IMAGE",
+          "size": 539659,
+          "type": "jpg",
+          "initialSize": 539659,
+          "optimized": false,
+          "height": 7325,
+          "width": 640
+        },
+        "b4b1bb3c": {
+          "id": "b4b1bb3c",
+          "path": "_site/deliverables/02-milestone/design/araujo-reports-04.jpg",
+          "output": "_site/deliverables/02-milestone/design/araujo-reports-04.jpg",
+          "name": "araujo-reports-04.jpg",
+          "category": "IMAGE",
+          "size": 137461,
+          "type": "jpg",
+          "initialSize": 137461,
+          "optimized": false,
+          "height": 4607,
+          "width": 240
+        },
+        "9687c42a": {
+          "id": "9687c42a",
+          "path": "_site/deliverables/04-milestone/dev/typography-guide.html",
+          "output": "_site/deliverables/04-milestone/dev/typography-guide.html",
+          "name": "typography-guide.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "40a11bce": {
+          "id": "40a11bce",
+          "path": "_site/deliverables/04-milestone/dev/css/typography.css",
+          "output": "_site/deliverables/04-milestone/dev/css/typography-dist.css",
+          "name": "typography.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "c53dd246": {
+          "id": "c53dd246",
+          "path": "_site/images/bg-placeholder.jpg",
+          "output": "_site/images/bg-placeholder.jpg",
+          "name": "bg-placeholder.jpg",
+          "category": "IMAGE",
+          "size": 366504,
+          "type": "jpg",
+          "initialSize": 366504,
+          "optimized": false,
+          "height": 1365,
+          "width": 2048
+        },
+        "9e664784": {
+          "id": "9e664784",
+          "path": "_site/images/bg-not-placeholder.jpg",
+          "output": "_site/images/bg-not-placeholder.jpg",
+          "name": "bg-not-placeholder.jpg",
+          "category": "IMAGE",
+          "size": 472959,
+          "type": "jpg",
+          "initialSize": 472959,
+          "optimized": false,
+          "height": 1200,
+          "width": 1800
+        },
+        "db051d58": {
+          "id": "db051d58",
+          "path": "_site/js/main.js",
+          "output": "_site/js/main-dist.js",
+          "name": "main.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
